--- a/src/app/consulta-empenho/consulta-empenho.component.css
+++ b/src/app/consulta-empenho/consulta-empenho.component.css
@@ -37,7 +37,7 @@ input[type="radio"] {
 .form-control-inline {
 	min-width: 0;
     width: auto;
-    display: inline;
+    display: inline  !important;
 
 }
 
