--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -17,13 +17,12 @@
         <div class="col-sm-5">
           <div class="form-group">
             <label for="unidadeEmp">Gestão:</label>
-              <select class="form-control" id="gestaoEmp" formControlName="gestao_emp">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                </select>
+              <input class="form-control" id="gestaoEmp" disabled="true"  placeholder="Gestão do Usuário" formControlName="gestao_emp">
+              <!--<option>1 Gestão é label</option>
+                  <option>2 Gestão é label</option>
+                  <option>3 Gestão é label</option>
+                  <option>4 Gestão é label</option>
+                  <option>5 Gestão é label</option> -->
           </div>
         </div>
 
