--- a/src/app/consulta-empenho/consulta-empenho.component.html
+++ b/src/app/consulta-empenho/consulta-empenho.component.html
@@ -196,7 +196,7 @@
       <!-- Início Empenho>Orçamentário Form -->
    
   <collapsible-panel title="Orçamentário" >
-    <div class="container" formGroupName="orcamentario">
+    <div class="container-fluid" formGroupName="orcamentario">
       <div class="row">
           <div class="col-sm-4">
             <div class="form-group">
@@ -258,13 +258,12 @@
       </div>
 
       <div class="row">
-        <div class="form-group">
-          <div class="col-sm-3">
-            <label for="gpNaturezaDespesa"> Grupo de Natureza de Despesa:
+                   <label for="gpNaturezaDespesa"> Grupo de Natureza de Despesa:
             </label>
+      <div class="form-group alignCenter">
+          <div class="col-sm-3">
           </div>
         <div class="col-sm-12">
- 
           <div class="borda">
           <label class="radio-inline">
             <input type="radio" id="p" name="quality[23]" value="pessoal" checked="checked" /> Pessoal (P)
@@ -293,6 +292,7 @@
         </div>  <!-- col-sm-12 -->
         </div> <!-- form group -->
       </div> <!-- row -->
+
     <div class="row">
         <div class="col-sm-4">
             <div class="form-group">
